# FlightData

./: README.md  pyproject.toml  requirements.txt  setup.cfg  temp.csv  uv.toml
.github/workflows/: publish_pypi.yml
examples/: flight_data.py
examples/interpolation/: linear.py  slice_linear_interpolation.py
examples/state_analysis/: axes.py
flightdata/: __init__.py  bindata.py  box.py  data.py  fields.py  origin.py  state.py
flightdata/base/: __init__.py  collection.py  table.py
flightdata/environment/: environment.py
flightdata/flight/: __init__.py  fields.py  flight.py
flightdata/mapping/: ardupilot_ekfv2.py  ardupilot_ekfv3.py
flightdata/model/: flow.py
flightdata/parsers/: ardupilot.py  ardupilot_ekfv3.py
flightdata/schemas/: fcj.py
src/flightdata/: flow.py  state.py
src/flightdata/base/: __init__.py  collection.py  table.py
src/flightdata/base/table/: __init__.py  constructs.py  label.py  labelgroup.py  labelgroups.py  labels.py  slicer.py  table.py
src/flightdata/environment/: environment.py  wind.py
src/flightdata/flight/: flight.py
src/flightdata/state/: alignment.py  state.py
test/: conftest.py  test_ardupilot.py  test_data.py  test_flight.py  test_flightline.py  test_origin.py
test/base/: test_base.py  test_labels.py  test_table.py
test/data/: bin_parser_GPS.csv  bin_parser_POS.csv  make_inputs.py
test/test_environment/: test_environment.py
test/test_model/: test_model_coefficients.py  test_model_flow.py
test/test_state/: conftest.py  test_state.py  test_state_builders.py  test_state_conversions.py  test_state_measurements.py
